<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal"
    android:paddingHorizontal="25dp"
    android:orientation="vertical"
    >

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/imageView2"
            android:contentDescription="@string/mainLogo"
            android:layout_marginTop="40dp"
            android:src="@drawable/gamelogofinal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Username"

            android:background="@drawable/rounded_corner"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="18dp"
            android:layout_marginTop="70dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:autofillHints="emailAddress" />


        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"

            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:autofillHints="password"
            />

        <Button
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="100dp"
            android:text="@string/login"
            android:textColor="#181919"
            android:textSize="20sp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/or"
        android:padding="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textSize="15sp"
        />


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login_with"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/google" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/facebook" />

            <ImageView
                android:layout_width="55dp"
                android:layout_height="46dp"
                android:src="@drawable/apple" />

        </LinearLayout>




</LinearLayout>