<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".HomeActivity">


    <LinearLayout
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/mainLogo"
            android:src="@drawable/gamelogofinal" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="130dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/seiku"
            android:textColor="@color/white"
            android:textSize="15sp"

            />

    </LinearLayout>


    <Button
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:backgroundTint="#31363F"

        android:text="@string/shopNow" />



</LinearLayout>